# datadog-mcp

./: .dockerignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  package.json  pyproject.toml  server.py  test_env.py  test_metrics.py  test_server.py
.circleci/: config.yml
datadog_mcp/: server.py
datadog_mcp/tools/: get_logs.py  get_metrics.py  get_traces.py  list_metrics.py
datadog_mcp/utils/: datadog_client.py  formatters.py
ddmcp/tools/: get_fingerprints.py  get_teams.py  list_pipelines.py
tests/: README.md  __init__.py  conftest.py  test_env_logs.py  test_integration.py  test_logs.py  test_metrics.py  test_metrics_debug.py  test_metrics_final.py  test_modular.py  test_server.py  test_simple.py  test_teams.py  test_tools_working.py
tools/: get_fingerprints.py  get_logs.py  get_metric_field_values.py  get_metric_fields.py  get_metrics.py  get_service_definition.py  get_service_logs.py  get_service_metrics.py  get_teams.py  list_metrics.py  list_pipelines.py  list_service_definitions.py
utils/: datadog_client.py
