[project]
name = "ddmcp"
version = "0.0.4"
description = "Datadog MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "datadog-api-client>=2.35.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mcp>=1.9.4",
    "typing>=3.10.0.0",
]

[project.scripts]
ddmcp = "ddmcp.server:cli_main"
